src/objects/ACCL__Account_Set_Account__c.object
<CustomObject>
    <description>Junction object between Customer and Customer Set.</description>
    <fields>
        <fullName>ACCL__Account_Set_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Customer.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Set Customers (Customer)</relationshipLabel>
        <relationshipName>Account_Set_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Set__c</fullName>
        <description>Reference to Customer Set.</description>
        <label>Customer Set</label>
        <referenceTo>ACCL__Account_Set__c</referenceTo>
        <relationshipLabel>Customer Set Customers</relationshipLabel>
        <relationshipName>Account_Set_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Customer set Customer record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL_Customer_Store_Number__c</fullName>
        <formula>ACCL__Account_Set_Account__r.ACCL__Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Store Number</label>
        <type>Text</type>
    </fields>
    <label>Customer Set Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Set Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Compare_Customer_Set_Customer_Sales_Org</fullName>
        <active>true</active>
        <description>The Customer and the Customer Set must have the same Sales Org.</description>
        <errorConditionFormula>AND(
          NOT(ISBLANK(ACCL__Account_Set_Account__c)),
          TEXT(ACCL__Account_Set_Account__r.ACCL__Account_Template__r.ACCL__Sales_Org__c) &lt;&gt; TEXT(ACCL__Account_Set__r.ACCL__Sales_Org__c)
          )</errorConditionFormula>
        <errorMessage>The Customer and the Customer Set must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>